integrate e200 pi cam rtsp stream

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,54 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+/TimerLog_[9].txt
+/TimerLog_[8].txt
+/TimerLog_[7].txt
+/TimerLog_[6].txt
+/TimerLog_[5].txt
+/TimerLog_[4].txt
+/TimerLog_[3].txt
+/TimerLog_[2].txt
+/TimerLog_[1].txt
+/TimerLog_[14].txt
+/TimerLog_[13].txt
+/TimerLog_[12].txt
+/TimerLog_[11].txt
+/TimerLog_[10].txt
+/TimerLog_[0].txt
+/StreamingCore_log.txt
+/QoSLog.txt
+/Middleware_log.txt
+/DecoderCore_log.txt
+/TimerLog_[0].txt
+/TimerLog_[0].txt
+/TimerLog_[9].txt
+/TimerLog_[8].txt
+/TimerLog_[7].txt
+/TimerLog_[6].txt
+/TimerLog_[5].txt
+/TimerLog_[4].txt
+/TimerLog_[3].txt
+/TimerLog_[2].txt
+/TimerLog_[1].txt
+/TimerLog_[14].txt
+/TimerLog_[13].txt
+/TimerLog_[12].txt
+/TimerLog_[11].txt
+/TimerLog_[10].txt
+/TimerLog_[0].txt
+/TimerLog_[9].txt
+/TimerLog_[8].txt
+/TimerLog_[7].txt
+/TimerLog_[6].txt
+/TimerLog_[5].txt
+/TimerLog_[4].txt
+/TimerLog_[3].txt
+/TimerLog_[2].txt
+/TimerLog_[1].txt
+/TimerLog_[14].txt
+/TimerLog_[13].txt
+/TimerLog_[12].txt
+/TimerLog_[11].txt
+/TimerLog_[10].txt
+/TimerLog_[0].txt
